--- a/playwright-report/data/ba67e9f87d30f1231342c20301657e5862a36fab.md
+++ b/playwright-report/data/ba67e9f87d30f1231342c20301657e5862a36fab.md
@@ -38,16 +38,12 @@
     - generic [ref=e21]:
       - generic [ref=e22]:
         - generic [ref=e23]: "Введите длинный URL:"
-        - textbox "Введите длинный URL:" [ref=e24]:
+        - textbox "Введите длинный URL:" [active] [ref=e24]:
           - /placeholder: https://example.com/very/long/url/that/needs/to/be/shortened
-          - text: https://example.com/test1-1762249965428
+          - text: not-a-valid-url
       - button "Сократить URL" [ref=e25] [cursor=pointer]:
         - generic [ref=e26]: Сократить URL
     - text: ✓
-    - generic [ref=e28]:
-      - heading "❌ Ошибка" [level=3] [ref=e29]
-      - paragraph [ref=e30]: fetch failed
-      - button "Попробовать снова" [ref=e31] [cursor=pointer]
-  - contentinfo [ref=e32]:
-    - paragraph [ref=e33]: "© 2025 URL Shortener. Created with Node.js and Express. Версия: 1.0.0 (851c678 04.11.2025)"
+  - contentinfo [ref=e27]:
+    - paragraph [ref=e28]: "© 2025 URL Shortener. Created with Node.js and Express. Версия: 1.0.0 (698cad2 04.11.2025)"
 ```
