--- a/playwright-report/data/cbec2ee0757e3c11ea4c377855d16e1f3f1e8829.md
+++ b/playwright-report/data/cbec2ee0757e3c11ea4c377855d16e1f3f1e8829.md
@@ -38,11 +38,16 @@
     - generic [ref=e21]:
       - generic [ref=e22]:
         - generic [ref=e23]: "Введите длинный URL:"
-        - textbox "Введите длинный URL:" [active] [ref=e24]:
+        - textbox "Введите длинный URL:" [ref=e24]:
           - /placeholder: https://example.com/very/long/url/that/needs/to/be/shortened
+          - text: https://example.com/test-1762263354161
       - button "Сократить URL" [ref=e25] [cursor=pointer]:
         - generic [ref=e26]: Сократить URL
     - text: ✓
-  - contentinfo [ref=e27]:
-    - paragraph [ref=e28]: "© 2025 URL Shortener. Created with Node.js and Express. Версия: 1.0.0 (851c678 04.11.2025)"
+    - generic [ref=e28]:
+      - heading "❌ Ошибка" [level=3] [ref=e29]
+      - paragraph [ref=e30]: "Error connecting to database: fetch failed"
+      - button "Попробовать снова" [ref=e31] [cursor=pointer]
+  - contentinfo [ref=e32]:
+    - paragraph [ref=e33]: "© 2025 URL Shortener. Created with Node.js and Express. Версия: 1.0.0 (698cad2 04.11.2025)"
 ```
